plugins {
    id 'java'
    id 'org.springframework.boot' version '2.3.12.RELEASE' apply false
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

allprojects {
    group = 'com.foliageh'
    version = '0.1'
    repositories {
        mavenCentral()
    }
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(8)
        }
    }
    compileJava {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:2.3.12.RELEASE"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR12"
        }
    }
}
